--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
             border: 2px solid #ccc;
             border-radius: 25px;
             outline: none;
-            transition: border-color 0.2s;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            transition: border-color 0.2s, box-shadow 0.2s;
         }
 
         .search-bar input:focus {
             border-color: #0078d7;
+            box-shadow: 0 4px 20px rgba(0, 120, 215, 0.5);
         }
 
         .suggestions {
@@ -57,6 +59,7 @@
             border-radius: 8px;
             overflow: hidden;
             display: none;
+            z-index: 10;
         }
 
         .suggestions.active {
@@ -64,11 +67,19 @@
         }
 
         .suggestions a {
-            display: block;
+            display: flex;
+            align-items: center;
             padding: 10px 20px;
             text-decoration: none;
             color: #000;
             transition: background-color 0.2s;
+            gap: 10px;
+        }
+
+        .suggestions a img {
+            width: 24px;
+            height: 24px;
+            border-radius: 4px;
         }
 
         .suggestions a:hover {
@@ -80,24 +91,51 @@
     <div class="search-container">
         <img src="https://mytab.knovon.net/knovontablogo.png" alt="KnovonTab Logo" class="logo" width="200">
         <div class="search-bar">
-            <input id="searchInput" type="text" placeholder="Good Morning! What would you like to explore?" oninput="showSuggestions()">
-            <div class="suggestions" id="suggestions">
-                <a href="https://google.com">Google</a>
-                <a href="https://knovon.org">Knovon</a>
-                <a href="https://mail.google.com">Gmail</a>
-                <a href="https://roblox.com">Roblox</a>
-            </div>
+            <input id="searchInput" type="text" placeholder="Good Morning! What would you like to explore?" oninput="updateSuggestions()" onkeydown="handleEnter(event)">
+            <div class="suggestions" id="suggestions"></div>
         </div>
     </div>
 
     <script>
-        function showSuggestions() {
+        async function fetchSuggestions() {
+            const response = await fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vT93cBbDNQmVKKzM8plXrz4jwFKfMwYU5HtU2q-FIJUGVuSIsEn3ricsv9IsmmHtt_taw8-s9-pE4Ge/pub?gid=0&single=true&output=csv");
+            const data = await response.text();
+            return data.split("\n").slice(1).map(row => {
+                const [title, url, logo] = row.split(",");
+                return { title, url, logo };
+            });
+        }
+
+        let sites = [];
+        fetchSuggestions().then(data => sites = data);
+
+        function updateSuggestions() {
             const input = document.getElementById('searchInput').value;
             const suggestions = document.getElementById('suggestions');
+            suggestions.innerHTML = '';
+
             if (input.trim() === '') {
                 suggestions.classList.remove('active');
-            } else {
-                suggestions.classList.add('active');
+                return;
+            }
+
+            sites.forEach(site => {
+                const suggestion = document.createElement('a');
+                suggestion.href = site.url;
+                suggestion.innerHTML = `
+                    <img src="${site.logo || 'https://via.placeholder.com/24'}" alt="${site.title}">
+                    ${site.title}
+                `;
+                suggestions.appendChild(suggestion);
+            });
+
+            suggestions.classList.add('active');
+        }
+
+        function handleEnter(event) {
+            if (event.key === 'Enter') {
+                const query = document.getElementById('searchInput').value;
+                window.location.href = `https://www.google.com/search?q=${encodeURIComponent(query)}`;
             }
         }
 
