--- a/n.html
+++ b/n.html
@@ -22,7 +22,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 10px 20px;
+            padding: 20px 40px;
             background: #ffffff;
             z-index: 100;
         }
@@ -30,8 +30,10 @@
         .menu-left a, .menu-right a {
             text-decoration: none;
             color: #000;
-            margin: 0 10px;
+            margin: 0 15px;
             font-size: 1rem;
+            padding: 10px;
+            border-radius: 5px;
         }
 
         .menu-right {
@@ -40,17 +42,17 @@
         }
 
         .menu-right .apps-icon {
-            width: 24px;
-            height: 24px;
+            width: 32px;
+            height: 32px;
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 2px;
+            gap: 3px;
             cursor: pointer;
         }
 
         .menu-right .apps-icon div {
-            width: 6px;
-            height: 6px;
+            width: 8px;
+            height: 8px;
             background: #000;
             border-radius: 50%;
         }
@@ -58,26 +60,41 @@
         .dropdown {
             display: none;
             position: absolute;
-            top: 40px;
-            right: 10px;
+            top: 70px;
+            right: 40px;
             background: #ffffff;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
-            padding: 10px;
+            padding: 20px;
             z-index: 200;
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 10px;
+            gap: 20px;
         }
 
         .dropdown .app-item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             text-align: center;
+            cursor: pointer;
+            transition: transform 0.2s, box-shadow 0.2s;
+        }
+
+        .dropdown .app-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
 
         .dropdown img {
-            width: 40px;
-            height: 40px;
+            width: 50px;
+            height: 50px;
             margin-bottom: 5px;
+            border-radius: 8px;
+        }
+
+        .dropdown span {
+            font-size: 0.9rem;
         }
 
         .logo {
@@ -178,7 +195,7 @@
         async function fetchSuggestions() {
             const response = await fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vT93cBbDNQmVKKzM8plXrz4jwFKfMwYU5HtU2q-FIJUGVuSIsEn3ricsv9IsmmHtt_taw8-s9-pE4Ge/pub?gid=0&single=true&output=csv");
             const data = await response.text();
-            return data.split("\n").slice(1).map(row => {
+            return data.split("\\n").slice(1).map(row => {
                 const [title, url, logo] = row.split(",");
                 return { title, url, logo };
             });
@@ -197,7 +214,7 @@
                 const appItem = document.createElement('div');
                 appItem.className = 'app-item';
                 appItem.innerHTML = `
-                    <img src="${site.logo || 'https://via.placeholder.com/40'}" alt="${site.title}">
+                    <img src="${site.logo || 'https://via.placeholder.com/50'}" alt="${site.title}">
                     <span>${site.title}</span>
                 `;
                 appItem.onclick = () => window.location.href = site.url;
@@ -242,7 +259,7 @@
         }
 
         function handleEnter(event) {
-            if (event.key ==='Enter') {
+            if (event.key === 'Enter') {
                 const query = document.getElementById('searchInput').value;
                 if (query.trim() === '') return;
                 window.location.href = `https://www.google.com/search?q=${encodeURIComponent(query)}`;
@@ -251,7 +268,7 @@
 
         function toggleDropdown() {
             const dropdown = document.getElementById('dropdown');
-            dropdown.style.display = dropdown.style.display === 'block' ? 'none' : 'block';
+            dropdown.style.display = dropdown.style.display === 'grid' ? 'none' : 'grid';
         }
 
         document.addEventListener('click', (e) => {
