--- a/n.html
+++ b/n.html
@@ -17,86 +17,6 @@
             color: #000000;
         }
 
-        header {
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px 40px;
-            background: #ffffff;
-            z-index: 100;
-        }
-
-        .menu-left a, .menu-right a {
-            text-decoration: none;
-            color: #000;
-            margin: 0 15px;
-            font-size: 1rem;
-            padding: 10px;
-            border-radius: 5px;
-        }
-
-        .menu-right {
-            display: flex;
-            align-items: center;
-        }
-
-        .menu-right .apps-icon {
-            width: 32px;
-            height: 32px;
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 3px;
-            cursor: pointer;
-        }
-
-        .menu-right .apps-icon div {
-            width: 8px;
-            height: 8px;
-            background: #000;
-            border-radius: 50%;
-        }
-
-        .dropdown {
-            display: none;
-            position: absolute;
-            top: 70px;
-            right: 40px;
-            background: #ffffff;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            padding: 20px;
-            z-index: 200;
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
-        }
-
-        .dropdown .app-item {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            cursor: pointer;
-            transition: transform 0.2s, box-shadow 0.2s;
-        }
-
-        .dropdown .app-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-        }
-
-        .dropdown img {
-            width: 50px;
-            height: 50px;
-            margin-bottom: 5px;
-            border-radius: 8px;
-        }
-
-        .dropdown span {
-            font-size: 0.9rem;
-        }
-
         .logo {
             margin-top: 100px;
             margin-bottom: 30px;
@@ -167,22 +87,6 @@
     </style>
 </head>
 <body>
-    <header>
-        <div class="menu-left">
-            <a href="https://knovon.org">About</a>
-            <a href="https://chrome.google.com">Addon</a>
-        </div>
-        <div class="menu-right">
-            <a href="https://mail.knovon.org">Mail Box</a>
-            <div class="apps-icon" onclick="toggleDropdown()">
-                <div></div><div></div><div></div>
-                <div></div><div></div><div></div>
-                <div></div><div></div><div></div>
-            </div>
-            <div class="dropdown" id="dropdown"></div>
-        </div>
-    </header>
-
     <div class="search-container">
         <img src="https://mytab.knovon.net/knovontablogo.png" alt="KnovonTab Logo" class="logo" width="200">
         <div class="search-bar">
@@ -204,26 +108,10 @@
         let sites = [];
         fetchSuggestions().then(data => {
             sites = data;
-            populateDropdown();
         });
 
-        function populateDropdown() {
-            const dropdown = document.getElementById('dropdown');
-            dropdown.innerHTML = '';
-            sites.forEach(site => {
-                const appItem = document.createElement('div');
-                appItem.className = 'app-item';
-                appItem.innerHTML = `
-                    <img src="${site.logo || 'https://via.placeholder.com/50'}" alt="${site.title}">
-                    <span>${site.title}</span>
-                `;
-                appItem.onclick = () => window.location.href = site.url;
-                dropdown.appendChild(appItem);
-            });
-        }
-
         function updateSuggestions() {
-            const input = document.getElementById('searchInput').value;
+            const input = document.getElementById('searchInput').value.toLowerCase();
             const suggestions = document.getElementById('suggestions');
             suggestions.innerHTML = '';
 
@@ -232,7 +120,8 @@
                 return;
             }
 
-            sites.forEach(site => {
+            const filteredSites = sites.filter(site => site.title.toLowerCase().includes(input));
+            filteredSites.forEach(site => {
                 const suggestion = document.createElement('a');
                 suggestion.href = site.url;
                 suggestion.innerHTML = `
@@ -265,17 +154,6 @@
                 window.location.href = `https://www.google.com/search?q=${encodeURIComponent(query)}`;
             }
         }
-
-        function toggleDropdown() {
-            const dropdown = document.getElementById('dropdown');
-            dropdown.style.display = dropdown.style.display === 'grid' ? 'none' : 'grid';
-        }
-
-        document.addEventListener('click', (e) => {
-            if (!e.target.closest('.menu-right')) {
-                document.getElementById('dropdown').style.display = 'none';
-            }
-        });
     </script>
 </body>
 </html>
