--- a/n.html
+++ b/n.html
@@ -58,12 +58,7 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
             overflow: hidden;
-            display: none;
             z-index: 10;
-        }
-
-        .suggestions.active {
-            display: block;
         }
 
         .suggestions a {
@@ -96,6 +91,9 @@
     </div>
 
     <script>
+        let sites = [];
+
+        // Fetch suggestions from the Google Sheet
         async function fetchSuggestions() {
             const response = await fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vT93cBbDNQmVKKzM8plXrz4jwFKfMwYU5HtU2q-FIJUGVuSIsEn3ricsv9IsmmHtt_taw8-s9-pE4Ge/pub?gid=0&single=true&output=csv");
             const data = await response.text();
@@ -105,20 +103,16 @@
             });
         }
 
-        let sites = [];
         fetchSuggestions().then(data => {
             sites = data;
+            updateSuggestions(); // Display all suggestions initially
         });
 
+        // Filter and display suggestions
         function updateSuggestions() {
             const input = document.getElementById('searchInput').value.toLowerCase();
             const suggestions = document.getElementById('suggestions');
             suggestions.innerHTML = '';
-
-            if (input.trim() === '') {
-                suggestions.classList.remove('active');
-                return;
-            }
 
             const filteredSites = sites.filter(site => site.title.toLowerCase().includes(input));
             filteredSites.forEach(site => {
@@ -131,9 +125,10 @@
                 suggestions.appendChild(suggestion);
             });
 
-            suggestions.classList.add('active');
+            suggestions.style.display = filteredSites.length > 0 ? 'block' : 'none';
         }
 
+        // Update greeting based on the time of day
         function updateGreeting() {
             const now = new Date();
             const hours = now.getHours();
@@ -147,6 +142,7 @@
             searchInput.placeholder = greeting;
         }
 
+        // Perform Google search when Enter is pressed
         function handleEnter(event) {
             if (event.key === 'Enter') {
                 const query = document.getElementById('searchInput').value;
