--- a/beta.html
+++ b/beta.html
@@ -13,7 +13,9 @@
             flex-direction: column;
             align-items: center;
             height: 100vh;
-            background: #ffffff;
+            background-size: cover;
+            background-position: center;
+            transition: background-image 1s ease-in-out;
             color: #000000;
         }
 
@@ -48,121 +50,68 @@
             border-color: #0078d7;
             box-shadow: 0 4px 20px rgba(0, 120, 215, 0.5);
         }
-
-        .suggestions {
-            position: absolute;
-            top: 100%;
-            left: 0;
-            width: 100%;
-            background: white;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            overflow: hidden;
-            z-index: 10;
-        }
-
-        .suggestions a {
-            display: flex;
-            align-items: center;
-            padding: 10px 20px;
-            text-decoration: none;
-            color: #000;
-            gap: 10px;
-        }
-
-        .suggestions a img {
-            width: 24px;
-            height: 24px;
-            border-radius: 4px;
-        }
-
-        .suggestions a:hover {
-            background-color: #f1f1f1;
-        }
     </style>
 </head>
 <body>
     <div class="search-container">
         <img src="https://mytab.knovon.net/knovontablogo.png" alt="KnovonTab Logo" class="logo" width="200">
         <div class="search-bar">
-            <input id="searchInput" type="text" placeholder="Good Morning!" onfocus="updateGreeting()" oninput="updateSuggestions()" onkeydown="handleEnter(event)">
-            <div class="suggestions" id="suggestions"></div>
+            <input id="searchInput" type="text" placeholder="" readonly>
         </div>
     </div>
 
     <script>
-        let sites = [];
+        const prompts = [
+            { text: "What's the weather in Salt Lake City Utah?", image: "url('https://images.unsplash.com/photo-1560803344-2ad044715157?q=80&w=3904&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')" },
+            { text: "How far is Vegas from Phoenix Arizona?", image: "url('https://images.unsplash.com/photo-1587223043646-fa771d9e0c8b?q=80&w=3948&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')" },
+            { text: "How big is the Grand Canyon?", image: "url('https://images.unsplash.com/photo-1499875872124-7bc3e1d90c17?q=80&w=3870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')" },
+            { text: "How big is Lake Powell in Utah?", image: "url('https://images.unsplash.com/photo-1491469853134-73161cbf3471?q=80&w=3928&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')" },
+            { text: "How many buildings are in New York City?", image: "url('https://images.unsplash.com/photo-1448317846460-907988886b33?q=80&w=3870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')" }
+        ];
 
-        // Fetch all suggested sites from the Google Sheet
-        async function fetchSuggestions() {
-            const response = await fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vT93cBbDNQmVKKzM8plXrz4jwFKfMwYU5HtU2q-FIJUGVuSIsEn3ricsv9IsmmHtt_taw8-s9-pE4Ge/pub?gid=0&single=true&output=csv");
-            const data = await response.text();
-            sites = data.split("\\n").slice(1).map(row => {
-                const [title, url, logo] = row.split(",");
-                return { title: title.trim(), url: url.trim(), logo: logo.trim() };
-            });
-            updateSuggestions(); // Display all suggestions initially
-        }
+        let currentPromptIndex = 0;
+        const searchInput = document.getElementById('searchInput');
 
-        fetchSuggestions();
+        function typeText(text, callback) {
+            let index = 0;
+            searchInput.value = "";
 
-        // Filter and display suggestions based on input
-        function updateSuggestions() {
-            const input = document.getElementById('searchInput').value.toLowerCase();
-            const suggestions = document.getElementById('suggestions');
-            suggestions.innerHTML = '';
+            const interval = setInterval(() => {
+                searchInput.value += text[index];
+                index++;
 
-            const filteredSites = sites.filter(site => site.title.toLowerCase().includes(input));
-            filteredSites.forEach(site => {
-                const suggestion = document.createElement('a');
-                suggestion.href = site.url;
-                suggestion.target = "_blank"; // Open in a new tab
-                suggestion.innerHTML = `
-                    <img src="${site.logo || 'https://via.placeholder.com/24'}" alt="${site.title}">
-                    ${site.title}
-                `;
-                suggestions.appendChild(suggestion);
-            });
-
-            suggestions.style.display = filteredSites.length > 0 ? 'block' : 'none';
-        }
-
-        // Update greeting based on the time of day
-        function updateGreeting() {
-            const now = new Date();
-            const hours = now.getHours();
-            const searchInput = document.getElementById('searchInput');
-            let greeting = "Good Morning!";
-            if (hours >= 12 && hours < 18) {
-                greeting = "Good Afternoon!";
-            } else if (hours >= 18) {
-                greeting = "Good Evening!";
-            }
-            searchInput.placeholder = greeting;
-        }
-
-        // Handle search or redirection on Enter key press
-        function handleEnter(event) {
-            if (event.key === 'Enter') {
-                const query = document.getElementById('searchInput').value.trim();
-
-                // Check if input matches a site title
-                const matchedSite = sites.find(site => site.title.toLowerCase() === query.toLowerCase());
-                if (matchedSite) {
-                    window.location.href = matchedSite.url;
-                    return;
+                if (index === text.length) {
+                    clearInterval(interval);
+                    setTimeout(callback, 2000); // Hold text for 2 seconds before deleting
                 }
-
-                // Check if input is a valid domain
-                const domainPattern = /^[a-z0-9.-]+\\.[a-z]{2,}$/i;
-                if (domainPattern.test(query)) {
-                    window.location.href = query.startsWith('http') ? query : `https://${query}`;
-                } else {
-                    // Perform Google search
-                    window.location.href = `https://www.google.com/search?q=${encodeURIComponent(query)}`;
-                }
-            }
+            }, 100);
         }
+
+        function deleteText(callback) {
+            const interval = setInterval(() => {
+                searchInput.value = searchInput.value.slice(0, -1);
+
+                if (searchInput.value.length === 0) {
+                    clearInterval(interval);
+                    callback();
+                }
+            }, 50);
+        }
+
+        function cyclePrompts() {
+            const { text, image } = prompts[currentPromptIndex];
+            document.body.style.backgroundImage = image;
+
+            typeText(text, () => {
+                deleteText(() => {
+                    currentPromptIndex = (currentPromptIndex + 1) % prompts.length;
+                    cyclePrompts();
+                });
+            });
+        }
+
+        // Start cycling through prompts
+        cyclePrompts();
     </script>
 </body>
 </html>
