--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             { text: "What's the weather in Salt Lake City Utah?", image: "url('https://images.unsplash.com/photo-1603939540289-922b5886c597?q=80&w=3850&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')" },
             { text: "How far is Vegas from Phoenix Arizona?", image: "url('https://images.unsplash.com/photo-1589046212139-bf293b6eba18?q=80&w=3870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')" },
             { text: "How big is the Grand Canyon?", image: "url('https://images.unsplash.com/photo-1555997157-5c8da70533b0?q=80&w=3870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')" },
-            { text: "How big is Lake Powell in Utah?", image: "url('https://images.unsplash.com/photo-1575408264798-b50b252663e6?q=80&w=3906&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D },
+            { text: "How big is Lake Powell in Utah?", image: "url('https://images.unsplash.com/photo-1575408264798-b50b252663e6?q=80&w=3906&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')" },
             { text: "How many buildings are in New York City?", image: "url('https://images.unsplash.com/photo-1486607303850-bc051a4ffad4?q=80&w=3874&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')" }
         ];
 
