--- a/beta.html
+++ b/beta.html
@@ -104,9 +104,13 @@
             { text: "How many buildings are in New York City?", image: "url('https://images.unsplash.com/photo-1486607303850-bc051a4ffad4?q=80&w=3874&auto=format&fit=crop')" }
         ];
 
-        let currentPromptIndex = 0;
         const searchInput = document.getElementById('searchInput');
         const statusElement = document.getElementById('status');
+
+        function getRandomPrompt() {
+            const randomIndex = Math.floor(Math.random() * prompts.length);
+            return prompts[randomIndex];
+        }
 
         function typeText(text, callback) {
             let index = 0;
@@ -131,13 +135,12 @@
         }
 
         function cyclePrompts() {
-            const { text, image } = prompts[currentPromptIndex];
+            const { text, image } = getRandomPrompt();
             document.body.style.backgroundImage = image;
 
             if (document.activeElement !== searchInput) {
                 typeText(text, () => {
                     deleteText(() => {
-                        currentPromptIndex = (currentPromptIndex + 1) % prompts.length;
                         cyclePrompts();
                     });
                 });
@@ -152,10 +155,14 @@
                     return;
                 }
 
-                try {
-                    new URL(query.startsWith('http') ? query : `https://${query}`);
-                    window.location.href = query.startsWith('http') ? query : `https://${query}`;
-                } catch {
+                // Regex to detect valid domain
+                const domainPattern = /^[a-z0-9.-]+\.[a-z]{2,}$/i;
+                if (domainPattern.test(query)) {
+                    // Redirect to the domain
+                    const url = query.startsWith('http') ? query : `https://${query}`;
+                    window.location.href = url;
+                } else {
+                    // Perform a Google search
                     window.location.href = `https://www.google.com/search?q=${encodeURIComponent(query)}`;
                 }
             }
