--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KnovonTab</title>
+    <title>New Tab - Knovon</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -60,6 +60,30 @@
             border-color: #0078d7;
             box-shadow: 0 4px 20px rgba(0, 120, 215, 0.5);
         }
+
+        #status {
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            background: rgba(255, 0, 0, 0.8);
+            color: #fff;
+            padding: 5px 10px;
+            border-radius: 5px;
+            display: none;
+            font-size: 0.9rem;
+        }
+
+        @media (max-width: 600px) {
+            .logo {
+                width: 150px;
+                margin-top: 50px;
+            }
+
+            .search-bar input {
+                font-size: 1rem;
+                padding: 10px 15px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -69,18 +93,24 @@
             <input id="searchInput" type="text" placeholder="Start typing...">
         </div>
     </div>
+    <div id="status"></div>
 
     <script>
         const prompts = [
-            { text: "What's the weather in Salt Lake City Utah?", image: "url('https://images.unsplash.com/photo-1603939540289-922b5886c597?q=80&w=3850&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')" },
-            { text: "How far is Vegas from Phoenix Arizona?", image: "url('https://images.unsplash.com/photo-1589046212139-bf293b6eba18?q=80&w=3870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')" },
-            { text: "How big is the Grand Canyon?", image: "url('https://images.unsplash.com/photo-1555997157-5c8da70533b0?q=80&w=3870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')" },
-            { text: "How big is Lake Powell in Utah?", image: "url('https://images.unsplash.com/photo-1575408264798-b50b252663e6?q=80&w=3906&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')" },
-            { text: "How many buildings are in New York City?", image: "url('https://images.unsplash.com/photo-1486607303850-bc051a4ffad4?q=80&w=3874&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')" }
+            { text: "What's the weather in Salt Lake City Utah?", image: "url('https://images.unsplash.com/photo-1603939540289-922b5886c597?q=80&w=3850&auto=format&fit=crop')" },
+            { text: "How far is Vegas from Phoenix Arizona?", image: "url('https://images.unsplash.com/photo-1589046212139-bf293b6eba18?q=80&w=3870&auto=format&fit=crop')" },
+            { text: "How big is the Grand Canyon?", image: "url('https://images.unsplash.com/photo-1555997157-5c8da70533b0?q=80&w=3870&auto=format&fit=crop')" },
+            { text: "How big is Lake Powell in Utah?", image: "url('https://images.unsplash.com/photo-1575408264798-b50b252663e6?q=80&w=3906&auto=format&fit=crop')" },
+            { text: "How many buildings are in New York City?", image: "url('https://images.unsplash.com/photo-1486607303850-bc051a4ffad4?q=80&w=3874&auto=format&fit=crop')" }
         ];
 
-        let currentPromptIndex = 0;
         const searchInput = document.getElementById('searchInput');
+        const statusElement = document.getElementById('status');
+
+        function getRandomPrompt() {
+            const randomIndex = Math.floor(Math.random() * prompts.length);
+            return prompts[randomIndex];
+        }
 
         function typeText(text, callback) {
             let index = 0;
@@ -89,7 +119,7 @@
                 index++;
                 if (index === text.length) {
                     clearInterval(interval);
-                    setTimeout(callback, 2000); // Hold text for 2 seconds before deleting
+                    setTimeout(callback, 2000);
                 }
             }, 100);
         }
@@ -105,31 +135,54 @@
         }
 
         function cyclePrompts() {
-            const { text, image } = prompts[currentPromptIndex];
+            const { text, image } = getRandomPrompt();
             document.body.style.backgroundImage = image;
 
-            typeText(text, () => {
-                deleteText(() => {
-                    currentPromptIndex = (currentPromptIndex + 1) % prompts.length;
-                    cyclePrompts();
+            if (document.activeElement !== searchInput) {
+                typeText(text, () => {
+                    deleteText(() => {
+                        cyclePrompts();
+                    });
                 });
-            });
+            }
         }
 
         searchInput.addEventListener('keydown', (event) => {
             if (event.key === 'Enter') {
                 const query = searchInput.value.trim();
+                if (query === "") {
+                    alert("Please enter a query before pressing Enter.");
+                    return;
+                }
 
+                // Regex to detect valid domain
                 const domainPattern = /^[a-z0-9.-]+\.[a-z]{2,}$/i;
                 if (domainPattern.test(query)) {
-                    window.location.href = query.startsWith('http') ? query : `https://${query}`;
+                    // Redirect to the domain
+                    const url = query.startsWith('http') ? query : `https://${query}`;
+                    window.location.href = url;
                 } else {
+                    // Perform a Google search
                     window.location.href = `https://www.google.com/search?q=${encodeURIComponent(query)}`;
                 }
             }
         });
 
-        // Start cycling through prompts
+        function updateOnlineStatus() {
+            if (navigator.onLine) {
+                statusElement.style.display = 'none';
+            } else {
+                statusElement.textContent = 'You are offline. Some features may not work.';
+                statusElement.style.backgroundColor = 'rgba(255, 0, 0, 0.8)';
+                statusElement.style.display = 'block';
+            }
+        }
+
+        window.addEventListener('online', updateOnlineStatus);
+        window.addEventListener('offline', updateOnlineStatus);
+
+        // Initialize the page
+        updateOnlineStatus();
         cyclePrompts();
     </script>
 </body>
