--- a/beta.html
+++ b/beta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Tab - Knovon</title>
+    <title>KnovonTab</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -46,7 +46,7 @@
 
         .search-bar input {
             width: 100%;
-            padding: 15px 45px 15px 40px; /* Add padding for the icon */
+            padding: 15px 45px 15px 40px;
             font-size: 1.2rem;
             border: 2px solid #ccc;
             border-radius: 25px;
@@ -90,7 +90,7 @@
 
             .search-bar input {
                 font-size: 1rem;
-                padding: 10px 45px 10px 40px; /* Adjust padding for smaller screens */
+                padding: 10px 45px 10px 40px;
             }
         }
     </style>
@@ -148,13 +148,11 @@
             const { text, image } = getRandomPrompt();
             document.body.style.backgroundImage = image;
 
-            if (document.activeElement !== searchInput) {
-                typeText(text, () => {
-                    deleteText(() => {
-                        cyclePrompts();
-                    });
+            typeText(text, () => {
+                deleteText(() => {
+                    cyclePrompts();
                 });
-            }
+            });
         }
 
         searchInput.addEventListener('keydown', (event) => {
@@ -165,7 +163,6 @@
                     return;
                 }
 
-                // Regex to detect valid domain
                 const domainPattern = /^[a-z0-9.-]+\.[a-z]{2,}$/i;
                 if (domainPattern.test(query)) {
                     const url = query.startsWith('http') ? query : `https://${query}`;
@@ -191,11 +188,9 @@
 
         // Initialize the page
         updateOnlineStatus();
-        cyclePrompts();
-
-        // Focus the search input box on load
         window.onload = () => {
             searchInput.focus();
+            cyclePrompts();
         };
     </script>
 </body>
